moved to Jackson from Gson, added RSSFeedReader test
Gson doesn't support deserializing Java Records, so I had to swap to Jackson instead. I also added an initial test for the RSSFeedReader, for both the BestBuy and Windows blogs. There's also a sample command to run the JAR after it's built in the README now.

Signed-off-by: Aaron <10177767+AaronPinto@users.noreply.github.com>