@@ -1,3 +1,5 @@
 # Server
 
 The code for my utilities which run on my server
+
+`java --enable-preview -jar Server-1.0.jar recipient@gmail.com sender`
